--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ index.js
 package.json
 package-lock.json
 plan
+Dokumentacija/TIM SLAV Co Model BP verzija 1.0.zip
+SLAV Co Dokumentacija.zip
+*.zip
+*.zip
+SLAV Co Dokumentacija.zip
+*.pyc
