--- a/Implementacija/djiro_vue/package.json
+++ b/Implementacija/djiro_vue/package.json
@@ -11,10 +11,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "vue": "^3.2.13",
+    "vue": "^3.2.36",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
