--- a/Implementacija/djiro_vue/package.json
+++ b/Implementacija/djiro_vue/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
+    "bootstrap-vue-3": "^0.1.13",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
