Login and session persistence on the client side

--- a/Implementacija/djiro_vue/package.json
+++ b/Implementacija/djiro_vue/package.json
@@ -18,7 +18,8 @@
     "popper.js": "^1.16.1",
     "vue": "^3.2.36",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
