--- a/Implementacija/djiro_vue/package.json
+++ b/Implementacija/djiro_vue/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@popperjs/core": "^2.11.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
     "bootstrap-vue-3": "^0.1.13",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^3.2.36",
@@ -24,7 +26,6 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
