--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,8 +23,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
+        cd Implementacija
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
       run: |
+        cd djiro
         python manage.py test
