--- a/Implementacija/requirements.txt
+++ b/Implementacija/requirements.txt
@@ -13,6 +13,7 @@ Django==4.0.4
 django-cors-headers==3.12.0
 django-rest-framework==0.1.0
 django-templated-mail==1.1.1
+django-rest-auth==0.9.5
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
